<slot>: Add @Input fiveColor

--- a/src/app/slot/slot.component.scss
+++ b/src/app/slot/slot.component.scss
@@ -5,8 +5,11 @@
   box-sizing: border-box;
 
   border: 2px solid black;
-  background-image: url(src/assets/five-color.png);
-  background-size: cover;
   height: $slot-height;
   width: $slot-width;
+
+  &.five-color {
+    background-image: url(src/assets/five-color.png);
+    background-size: cover;
+  }
 }
