--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <card></card>
 <slot></slot>
+<slot fiveColor="true"></slot>
 <div style="background: blue">
   <img src="assets/equal.svg" alt="">
   <img src="assets/not-equal.svg" alt="">
