--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<card></card>
+<slot twoColor="red, green"></slot>
 <slot></slot>
 <slot fiveColor="true"></slot>
+
+<card></card>
+
 <div style="background: blue">
   <img src="assets/equal.svg" alt="">
   <img src="assets/not-equal.svg" alt="">
