--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
-<slot twoColor="red, green"></slot>
-<slot></slot>
-<slot fiveColor="true"></slot>
-
-<card></card>
-
-<div style="background: blue">
-  <img src="assets/equal.svg" alt="">
-  <img src="assets/not-equal.svg" alt="">
-</div>
+<card>
+  <slot twoColor="red, green"></slot>
+  <slot></slot>
+  <slot fiveColor="true"></slot>
+  <img class="math" src="assets/equal.svg" alt="">
+  <img class="math" src="assets/not-equal.svg" alt="">
+</card>
