--- a/src/app/slot/slot.component.scss
+++ b/src/app/slot/slot.component.scss
@@ -6,6 +6,7 @@
     box-sizing: border-box;
 
     border: 2px solid black;
+    background: white;
     height: $slot-height;
     width: $slot-width;
 
