--- a/src/variables.scss
+++ b/src/variables.scss
@@ -7,6 +7,8 @@ $whitespace-height: $card-height * 0.5;
 $slot-width: $card-width / 5;
 $slot-height: $slot-width;
 
+$math-width: $card-width / 15;
+
 $red: #d60a0a;
 $yellow: #edd310;
 $green: #06ad1a;
