--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,16 @@
-<card>
-  <slot twoColor="red, green"></slot>
-  <slot></slot>
-  <slot fiveColor="true"></slot>
-  <img class="math" src="assets/equal.svg" alt="">
-  <img class="math" src="assets/not-equal.svg" alt="">
-</card>
+<div class="cards">
+  <card>
+    <slot twoColor="red, green"></slot>
+    <slot></slot>
+    <slot fiveColor="true"></slot>
+    <img class="math" src="assets/equal.svg" alt="">
+    <img class="math" src="assets/not-equal.svg" alt="">
+  </card>
+  <card>
+    <slot #filledSlot twoColor="red, green"></slot>
+    <slot></slot>
+    <slot fiveColor="true"></slot>
+    <img class="math" src="assets/equal.svg" alt="">
+    <img class="math" src="assets/not-equal.svg" alt="">
+  </card>
+</div>
