--- a/src/app/slot/slot.component.scss
+++ b/src/app/slot/slot.component.scss
@@ -1,14 +1,22 @@
 @import "src/variables.scss";
 
 :host {
+  .white {
+    // This is just a background for .actual-slot:not(.has-die) to be translucent against
+    background: white;
+  }
+
   .actual-slot {
-    display: block;
     box-sizing: border-box;
 
     border: 2px solid black;
     background: white;
     height: $slot-height;
     width: $slot-width;
+
+    &:not(.has-die) {
+      opacity: 0.5;
+    }
 
     &.five-color {
       background-image: url(src/assets/five-color.png);
@@ -54,6 +62,27 @@
 
           // Gradient generated with http://www.colorzilla.com/gradient-editor/
         }
+      }
+    }
+  }
+
+  .die {
+    box-sizing: border-box;
+
+    height: $slot-height;
+    width: $slot-width;
+    border-radius: 8px; // todo: Should the border of the slot "below" the die peek out?
+    color: white;
+    font-weight: bold;
+
+    text-align: center;
+    line-height: $slot-height;
+    font-size: $number-size;
+    font-family: monospace;
+
+    @each $colorName, $color in $colors {
+      &.#{$colorName} {
+        background: $color;
       }
     }
   }
