--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,7 @@
     <img class="math" src="assets/not-equal.svg" alt="">
   </card>
   <card>
-    <slot #filledSlot twoColor="red, green"></slot>
+    <slot #filledSlot></slot>
     <slot></slot>
-    <slot fiveColor="true"></slot>
-    <img class="math" src="assets/equal.svg" alt="">
-    <img class="math" src="assets/not-equal.svg" alt="">
   </card>
 </div>
