--- a/src/variables.scss
+++ b/src/variables.scss
@@ -14,6 +14,8 @@ $math-width: $card-width / 15;
 
 $number-size: 44px;
 
+$border-radius-medium: 8px;
+
 // Colors ----------------------------------
 
 // If you change any of these, you'll need to update assets:
