--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,5 @@
 <div class="whitespace"></div>
 <div class="actual-card">
   <ng-content></ng-content>
+  <ng-template itemInsertionPoint></ng-template>
 </div>
