temp place dice

--- a/src/app/slot/slot.component.html
+++ b/src/app/slot/slot.component.html
@@ -6,7 +6,8 @@
       class="actual-slot"
       [ngClass]="{
         'five-color': fiveColor
-      }">
+      }"
+      (click)="handleClick()">
   </div>
 </div>
 <div #dieEl
