--- a/src/app/slot/slot.component.scss
+++ b/src/app/slot/slot.component.scss
@@ -8,13 +8,17 @@
   }
 
   .actual-slot {
-    box-sizing: border-box;
-
+    // box-sizing: border-box;
     // border: 2px solid black;
+
     border-radius: $border-radius-medium;
     background: white;
     height: $slot-height;
     width: $slot-width;
+
+    &:hover {
+      box-shadow: 4px 4px 4px orange;
+    }
 
     &:not(.has-die) {
       opacity: 0.5;
